refactor(plugin): rename limit to concurrency_control

--- a/pisa-proxy/app/config/Cargo.toml
+++ b/pisa-proxy/app/config/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 toml = "0.5"
 serde = { version = "1.0.133", default-features = false, features = ["derive"] }
 serde_derive = "1.0"
+serde_json = "1.0"
 api = {path = "../api"}
 plugin = {path = "../../plugin"}
 runtime_mysql = {path = "../../runtime/mysql"}
