--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,7 +22,7 @@ jobs:
       - name: openssl
         run: mkdir -p pisa-controller/build/certs && cd pisa-controller/build/certs && openssl req -new -SHA256 -newkey rsa:2048 -nodes -keyout tls.key -out tls.csr -subj "/C=CN/ST=beijing/L=beijing/O=/OU=/" && openssl x509 -req -sha256 -days 365 -in tls.csr -signkey tls.key -out tls.crt
       - name: "build"
-        run: CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -ldflags "-w -s" -gcflags "-N -l"  -o pisa-controller/bin/controller pisa-controller/cmd/main.go
+        run: cd pisa-controller && CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -ldflags "-w -s" -gcflags "-N -l"  -o bin/controller cmd/main.go
       - name: "Kaniko build"
         uses: aevea/action-kaniko@master
         with:
