--- a/charts/pisa-controller/crds/core.database-mesh.io_databaseendpoints.yaml
+++ b/charts/pisa-controller/crds/core.database-mesh.io_databaseendpoints.yaml
@@ -15,64 +15,66 @@ spec:
     singular: databaseendpoint
   scope: Namespaced
   versions:
-    - name: v1alpha1
-      schema:
-        openAPIV3Schema:
-          description: DatabaseEndpoint is the Schema for the databaseendpoints API
-          properties:
-            apiVersion:
-              description: 'APIVersion defines the versioned schema of this representation
+  - name: v1alpha1
+    schema:
+      openAPIV3Schema:
+        description: DatabaseEndpoint is the Schema for the databaseendpoints API
+        properties:
+          apiVersion:
+            description: 'APIVersion defines the versioned schema of this representation
               of an object. Servers should convert recognized schemas to the latest
               internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
-              type: string
-            kind:
-              description: 'Kind is a string value representing the REST resource this
+            type: string
+          kind:
+            description: 'Kind is a string value representing the REST resource this
               object represents. Servers may infer this from the endpoint the client
               submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
-              type: string
-            metadata:
-              type: object
-            spec:
-              description: DatabaseEndpointSpec defines the desired state of DatabaseEndpoint
-              properties:
-                database:
-                  properties:
-                    MySQL:
-                      properties:
-                        db:
-                          type: string
-                        host:
-                          type: string
-                        password:
-                          type: string
-                        port:
-                          type: string
-                        username:
-                          type: string
-                      required:
-                        - db
-                        - host
-                        - password
-                        - port
-                        - username
-                      type: object
-                  required:
-                    - MySQL
-                  type: object
-              required:
-                - database
-              type: object
-            status:
-              description: DatabaseEndpointStatus defines the observed state of DatabaseEndpoint
-              type: object
-          type: object
-      served: true
-      storage: true
-      subresources:
-        status: { }
+            type: string
+          metadata:
+            type: object
+          spec:
+            description: DatabaseEndpointSpec defines the desired state of DatabaseEndpoint
+            properties:
+              database:
+                description: Database Backend data source type
+                properties:
+                  MySQL:
+                    description: MySQL Configuration Definition
+                    properties:
+                      db:
+                        type: string
+                      host:
+                        type: string
+                      password:
+                        type: string
+                      port:
+                        type: string
+                      username:
+                        type: string
+                    required:
+                    - db
+                    - host
+                    - password
+                    - port
+                    - username
+                    type: object
+                required:
+                - MySQL
+                type: object
+            required:
+            - database
+            type: object
+          status:
+            description: DatabaseEndpointStatus defines the observed state of DatabaseEndpoint
+            type: object
+        type: object
+    served: true
+    storage: true
+    subresources:
+      status: {}
 status:
   acceptedNames:
     kind: ""
     plural: ""
-  conditions: [ ]
-  storedVersions: [ ]
+  conditions: []
+  storedVersions: []
