--- a/charts/pisa-controller/crds/core.database-mesh.io_virtualdatabases.yaml
+++ b/charts/pisa-controller/crds/core.database-mesh.io_virtualdatabases.yaml
@@ -15,75 +15,79 @@ spec:
     singular: virtualdatabase
   scope: Namespaced
   versions:
-    - name: v1alpha1
-      schema:
-        openAPIV3Schema:
-          description: VirtualDatabase is the Schema for the virtualdatabases API
-          properties:
-            apiVersion:
-              description: 'APIVersion defines the versioned schema of this representation
+  - name: v1alpha1
+    schema:
+      openAPIV3Schema:
+        description: VirtualDatabase is the Schema for the virtualdatabases API
+        properties:
+          apiVersion:
+            description: 'APIVersion defines the versioned schema of this representation
               of an object. Servers should convert recognized schemas to the latest
               internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
-              type: string
-            kind:
-              description: 'Kind is a string value representing the REST resource this
+            type: string
+          kind:
+            description: 'Kind is a string value representing the REST resource this
               object represents. Servers may infer this from the endpoint the client
               submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
-              type: string
-            metadata:
-              type: object
-            spec:
-              description: VirtualDatabaseSpec defines the desired state of VirtualDatabase
-              properties:
-                services:
-                  items:
-                    properties:
-                      databaseMySQL:
-                        properties:
-                          db:
-                            type: string
-                          host:
-                            type: string
-                          password:
-                            type: string
-                          poolSize:
-                            type: integer
-                          port:
-                            type: string
-                          username:
-                            type: string
-                        type: object
-                      name:
-                        type: string
-                      trafficStrategy:
-                        type: string
-                    required:
-                      - databaseMySQL
-                      - name
-                      - trafficStrategy
-                    type: object
-                  type: array
-              required:
-                - services
-              type: object
-            status:
-              description: VirtualDatabaseStatus defines the observed state of VirtualDatabase
-              properties:
-                endpoints:
-                  items:
-                    type: string
-                  type: array
-              required:
-                - endpoints
-              type: object
-          type: object
-      served: true
-      storage: true
-      subresources:
-        status: { }
+            type: string
+          metadata:
+            type: object
+          spec:
+            description: VirtualDatabaseSpec defines the desired state of VirtualDatabase
+            properties:
+              services:
+                items:
+                  description: Service Defines the content of a VirtualDatabase
+                  properties:
+                    databaseMySQL:
+                      description: DatabaseMySQL The type one of VirtualDatabase.Represents
+                        a virtual MySQL type
+                      properties:
+                        db:
+                          type: string
+                        host:
+                          type: string
+                        password:
+                          type: string
+                        poolSize:
+                          type: integer
+                        port:
+                          type: string
+                        username:
+                          type: string
+                      type: object
+                    name:
+                      type: string
+                    trafficStrategy:
+                      type: string
+                  required:
+                  - databaseMySQL
+                  - name
+                  - trafficStrategy
+                  type: object
+                type: array
+            required:
+            - services
+            type: object
+          status:
+            description: VirtualDatabaseStatus defines the observed state of VirtualDatabase
+              Endpoints display the name of the associated DatabaseEndpoint
+            properties:
+              endpoints:
+                items:
+                  type: string
+                type: array
+            required:
+            - endpoints
+            type: object
+        type: object
+    served: true
+    storage: true
+    subresources:
+      status: {}
 status:
   acceptedNames:
     kind: ""
     plural: ""
-  conditions: [ ]
-  storedVersions: [ ]
+  conditions: []
+  storedVersions: []
