FIX: Get kubernetes client using singleton

--- a/charts/pisa-controller/crds/core.database-mesh.io_trafficstrategies.yaml
+++ b/charts/pisa-controller/crds/core.database-mesh.io_trafficstrategies.yaml
@@ -61,7 +61,7 @@ spec:
               circuitBreaks:
                 items:
                   description: CircuitBreak works with regular expressions. SQL statements
-                    that conform to regular expressions will be truncated.
+                    that conform to regular expressions will be denied.
                   properties:
                     regex:
                       type: string
