--- a/charts/pisa-controller/values.yaml
+++ b/charts/pisa-controller/values.yaml
@@ -2,27 +2,44 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
+## @section pisa-controller parameters
+## @param replicaCount Number of pisa-controller nodes
+##
 replicaCount: 1
 
+## @param image.repository pisa-controller image repository
+## @param image.pullPolicy pisa-controller image pull policy
+## @param image.tag pisa-controller image tag
 image:
   repository: pisanixio/controller
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "v0.1.2"
+  tag: "v0.1.0"
 
-proxyImage:
-  repository: pisanixio/proxy
-  tag: "v0.1.1"
-
+## @param imagePullSecrets docker 私有仓库的密钥
 imagePullSecrets: [ ]
 
+## @param proxyImage.repository 需要注入的 pisa-proxy 的镜像名
+## @param proxyImage.tag 需要注入的 pisa-proxy 镜像tag
+proxyImage:
+  repository: pisanixio/proxy
+  tag: "v0.1.0"
+
+## @param resources.limits pisa-controller 资源限制数值
+## @param resources.requests.cpu pisa-controller 资源申请cpu核数
+## @param resources.requests.memory pisa-controller 资源申请内存数量
+## ref: https://kubernetes.io/docs/user-guide/compute-resources/
 resources:
+  limits: {}
   requests:
     cpu: 100m
     memory: 128Mi
 
+## @param service.corePort pisa-controller 核心暴露端口
+## @param service.webhookPort pisa-controller webhook 暴露端口
+## @param service.proxyConfigsPort pisa-controller 和 pisa-proxy 配置文件通信端口
 service:
-  basicPort: 80
+  corePort: 80
   webhookPort: 6443
   proxyConfigsPort: 8080
 
