--- a/example/config-sample.yaml
+++ b/example/config-sample.yaml
@@ -28,12 +28,12 @@ spec:
     matchLabels:
       source: rds
   loadBalance:
-    simpleLoadBalancer:
+    simpleLoadBalance:
       kind: "random"
   circuitBreaks:
     - regex: "/[1-9][0-9]*/"
     - regex: "/[1-2][0-9]*/"
-  ConcurrencyControls:
+  concurrencyControls:
     - regex: "/[1-2][0-9]*/"
       duration: 1
       maxConcurrency: 11
