--- a/charts/pisa-controller/values.yaml
+++ b/charts/pisa-controller/values.yaml
@@ -10,14 +10,13 @@ replicaCount: 1
 ## @param image.repository pisa-controller image repository
 ## @param image.pullPolicy pisa-controller image pull policy
 ## @param image.tag pisa-controller image tag
+## @param image.imagePullSecrets docker 私有仓库的密钥
 image:
   repository: pisanixio/controller
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
   tag: "v0.1.0"
-
-## @param imagePullSecrets docker 私有仓库的密钥
-imagePullSecrets: [ ]
+  imagePullSecrets: [ ]
 
 ## @param proxyImage.repository 需要注入的 pisa-proxy 的镜像名
 ## @param proxyImage.tag 需要注入的 pisa-proxy 镜像tag
