feat(config): update config option name and structure

--- a/pisa-proxy/Cargo.toml
+++ b/pisa-proxy/Cargo.toml
@@ -16,7 +16,7 @@ members = [
     "protocol/mysql",
     "proxy",
     "proxy/endpoint",
-    "proxy/loadbalancer",
+    "proxy/loadbalance",
     "runtime/common",
     "runtime/mysql",
     "runtime/shardingproxy",
