--- a/pisa-proxy/examples/example-config.toml
+++ b/pisa-proxy/examples/example-config.toml
@@ -8,46 +8,46 @@ log_level = "INFO"
 # pisa-proxy 代理配置块
 [proxy]
 # config a proxy
-[[proxy.configs]]
+[[proxy.config]]
 # proxy 代理地址
-listen_addr = "0.0.0.0:8001"
+listen_addr = "0.0.0.0:9088"
 # proxy 认证用户名
 username = "root"
 # proxy 认证密码
 password = "12345678"
 # proxy schema
-db = "foo"
+db = "test"
 # 配置后端数据源类型
 backend_type = "mysql"
 # proxy 与后端数据库建连连接池大小，值范围：1 ~ 255, 默认值：64
 pool_size = 3
 
 # 后端负载均衡配置
-[proxy.configs.simple_loadbalancer]
+[proxy.config.simple_loadbalance]
 # 负载均衡算法：[random/roundrobin], 默认值: random 算法
-balancer_type = "random"
+balance_type = "random"
 # 选择挂载后端节点
 nodes = ["ds001"]
 
-[[proxy.configs.plugin.concurrency_control]]
+[[proxy.config.plugin.concurrency_control]]
 regex = "aaa"
 max_concurrency = 5
 duration = "333"
 
-[[proxy.configs.plugin.concurrency_control]]
+[[proxy.config.plugin.concurrency_control]]
 regex = "bbb"
 max_concurrency = 5
 duration = "444"
 
-[[proxy.configs.plugin.circuit_breaker]]
+[[proxy.config.plugin.circuit_break]]
 regex = "111"
 
-[[proxy.configs.plugin.circuit_breaker]]
+[[proxy.config.plugin.circuit_break]]
 regex = "222"
 
 # 后端数据源配置
 [mysql]
-[[mysql.nodes]]
+[[mysql.node]]
 # 数据源 name
 name = "ds001"
 # database name
@@ -55,8 +55,8 @@ db = "foo"
 # 数据库 user
 user = "root"
 # 数据库 password
-password = "root"
+password = "12345678"
 # 数据库地址
-addr = "127.0.0.1:3307"
+addr = "127.0.0.1:3306"
 # 负载均衡节点权重
 weight = 1
