Reflect(types):  Refactor types to fit new api (#37)
* Reflect(config-sample.yaml core.database-mesh.io_trafficstrategies.yaml  proxy/types.go kubernetes/types.go):
1. Refactor types to fit new api
Fix(deployment.yaml webhook.go):
1. Fix basicPort to corePort
2. Fix CRD key ConcurrencyControls to concurrencyControls
3. Change sample file
4. Fix slash problem
ADD(values.yaml): add some comments

* FIX(values.yaml ): change imagePullSecrets to image

--- a/charts/pisa-controller/templates/deployment.yaml
+++ b/charts/pisa-controller/templates/deployment.yaml
@@ -24,7 +24,7 @@ spec:
             - -webhookTLSCertFile=/etc/webhook/certs/tls.crt
             - -webhookTLSKeyFile=/etc/webhook/certs/tls.key
             - -webhookPort={{ .Values.service.webhookPort }}
-            - -corePort={{ .Values.service.basicPort }}
+            - -corePort={{ .Values.service.corePort }}
             - -proxyConfigsPort={{ .Values.service.proxyConfigsPort }}
           env:
             - name: PISA_PROXY_IMAGE
@@ -39,10 +39,10 @@ spec:
             - name: webhook
               containerPort: {{ .Values.service.webhookPort }}
             - name: core
-              containerPort: {{ .Values.service.basicPort }}
+              containerPort: {{ .Values.service.corePort }}
             - name: proxy-configs
               containerPort: {{ .Values.service.proxyConfigsPort }}
           resources:
           {{- toYaml .Values.resources | nindent 12}}
       imagePullSecrets:
-      {{- toYaml .Values.imagePullSecrets | nindent 8}}
+      {{- toYaml .Values.image.imagePullSecrets | nindent 8}}
