Add(license): add check-license bot

--- a/.github/workflows/check-license.yml
+++ b/.github/workflows/check-license.yml
@@ -14,16 +14,20 @@
 ## limitations under the License.
 ##
 
-apiVersion: apiregistration.k8s.io/v1
-kind: APIService
-metadata:
-  name: v1alpha1.admission.database-mesh.io
-spec:
-  insecureSkipTLSVerify: true
-  group: admission.database-mesh.io
-  groupPriorityMinimum: 1000
-  versionPriority: 5
-  service:
-    name: {{ template "common.names.fullname" . }}
-    namespace: {{ .Release.Namespace }}
-  version: v1alpha1
+name: check-license
+
+on: push
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
+jobs:
+  check-license:
+    name: check-license
+    timeout-minutes: 10
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Check License Header
+        uses: apache/skywalking-eyes@main
