--- a/charts/pisa-controller/templates/rbac.yaml
+++ b/charts/pisa-controller/templates/rbac.yaml
@@ -17,14 +17,14 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ printf "%s-sa" (include "common.names.fullname" .) }}
+  name: {{ template "common.names.fullname" . }}
   namespace: {{ .Release.Namespace }}
 
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: {{ printf "%s-cr" (include "common.names.fullname" .) }}
+  name: {{ template "common.names.fullname" . }}
 rules:
   - apiGroups:
       - ""
@@ -43,12 +43,12 @@ rules:
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: {{ printf "%s-crb" (include "common.names.fullname" .) }}
+  name: {{ template "common.names.fullname" . }}
 subjects:
   - kind: ServiceAccount
-    name: {{ printf "%s-sa" (include "common.names.fullname" .) }}
+    name: {{ template "common.names.fullname" . }}
     namespace: {{ .Release.Namespace }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: {{ printf "%s-cr" (include "common.names.fullname" .) }}
+  name: {{ template "common.names.fullname" . }}
