chore(Dockerfile): change docker file to fit Makefile

--- a/pisa-controller/hack/Dockerfile
+++ b/pisa-controller/hack/Dockerfile
@@ -17,16 +17,16 @@ FROM golang:1.17 as builder
 WORKDIR /workspace
 
 # Copy the Go Modules manifests
-COPY pisa-controller/go.mod go.mod
-COPY pisa-controller/go.sum go.sum
+COPY go.mod go.mod
+COPY go.sum go.sum
 # cache deps before building and copying source so that we don't need to re-download as much
 # and so that source changes don't invalidate our downloaded layer
 RUN go mod download
 
 # Copy the go source
-COPY pisa-controller/cmd cmd/
+COPY cmd cmd/
 
-COPY pisa-controller/pkg pkg/
+COPY pkg pkg/
 
 # Build
 RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build  -ldflags "-w -s" -gcflags "-N -l" -a -o controller cmd/pisa-controller/main.go
@@ -36,6 +36,6 @@ FROM --platform=linux/amd64 alpine:3.15.4
 WORKDIR /
 COPY --from=builder /workspace/controller .
 USER root
-COPY pisa-controller/build/certs /etc/webhook/certs
+COPY build/certs /etc/webhook/certs
 
 ENTRYPOINT ["/controller"]
