--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,8 @@ jobs:
   pisa-controller:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: "checkout codes"
+        uses: actions/checkout@v2
       - name: "Kaniko build"
         uses: mlycore/action-kaniko@master
         with:
@@ -23,7 +24,8 @@ jobs:
   pisa-proxy:
     runs-on: ubuntu-latest 
     steps:
-      - uses: actions/checkout@v2
+      - name: "checkout codes"
+        uses: actions/checkout@v2
       - name: "Kaniko build"
         uses: mlycore/action-kaniko@master
         with:
