chore(helm): change service account name

--- a/charts/pisa-controller/templates/deployment.yaml
+++ b/charts/pisa-controller/templates/deployment.yaml
@@ -31,7 +31,7 @@ spec:
       labels:
         app: {{ template "common.names.fullname" . }}
     spec:
-      serviceAccountName: {{ printf "%s-sa" (include "common.names.fullname" .) }}
+      serviceAccountName: {{ template "common.names.fullname" . }}
       containers:
         - name: controller
           image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
