--- a/pisa-proxy/cmd/pisa/Cargo.toml
+++ b/pisa-proxy/cmd/pisa/Cargo.toml
@@ -5,6 +5,10 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[[bin]]
+name = "proxy"
+path = "src/main.rs"
+
 [dependencies]
 chrono = "0.4"
 futures = { version = "0.3", default-features = false }
