fix(runtime): fix config error db lost connect (#53)
* fix(runtime): fix config error db lost connect

* fix(runtime): fix config error db lost connect

* fix(runtime): fix config error db lost connect

* fix(runtime): fix config error db lost connect

* fix(runtime): fix config error db lost connect

Co-authored-by: wangbo <wangbo@sphere-ex.com>

--- a/pisa-proxy/examples/example-config.toml
+++ b/pisa-proxy/examples/example-config.toml
@@ -32,12 +32,12 @@ nodes = ["ds001"]
 [[proxy.config.plugin.concurrency_control]]
 regex = "aaa"
 max_concurrency = 5
-duration = "333"
+duration = 333
 
 [[proxy.config.plugin.concurrency_control]]
 regex = "bbb"
 max_concurrency = 5
-duration = "444"
+duration = 333
 
 [[proxy.config.plugin.circuit_break]]
 regex = "111"
