feat(readme，shortname): add short name for CRD,add a readme for pisa-controller

--- a/charts/pisa-controller/crds/core.database-mesh.io_databaseendpoints.yaml
+++ b/charts/pisa-controller/crds/core.database-mesh.io_databaseendpoints.yaml
@@ -29,6 +29,8 @@ spec:
     listKind: DatabaseEndpointList
     plural: databaseendpoints
     singular: databaseendpoint
+    shortNames:
+    - dbep
   scope: Namespaced
   versions:
   - name: v1alpha1
