--- a/pisa-proxy/examples/example-config.toml
+++ b/pisa-proxy/examples/example-config.toml
@@ -16,7 +16,7 @@ user = "root"
 # proxy 认证密码
 password = "12345678"
 # proxy schema
-db = "tpcc1"
+db = "test"
 # 配置后端数据源类型
 backend_type = "mysql"
 # proxy 与后端数据库建连连接池大小，值范围：1 ~ 255, 默认值：64
@@ -59,6 +59,6 @@ password = "12345678"
 # 数据库地址
 host = "127.0.0.1"
 # 数据库端口
-port = 3306
+port = 3308
 # 负载均衡节点权重
 weight = 1
