fix(ci): fix helm action version
Signed-off-by: mlycore <maxwell92@126.com>

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -16,7 +16,7 @@ jobs:
       - name: "checkout codes" 
         uses: actions/checkout@master
       - name: "setup kind"
-        uses: helm/kind-action
+        uses: helm/kind-action@v1.2.0
       - name: "setup helm"
         uses: azure/setup-helm@v2.1
       - name: "setup kubectl" 
