chore(ci): rename ci to unit-test and introduce integration
Signed-off-by: mlycore <maxwell92@126.com>

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -17,12 +17,11 @@
 name: Integration Test
 
 on:
-  pull_request:
-    branches:
-      - master
   push:
     branches:
+      - master
       - ci 
+      - release-v*
 
 jobs:
   run:
@@ -56,9 +55,9 @@ jobs:
         uses: mlycore/action-kaniko@master
         with:
           image: pisanixio/controller
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
-          registry: ${{ secrets.DOCKERHUB_HOST }}
+          username: ${{ secrets.DOCKERHUB_CI_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_CI_PASSWORD }}
+          registry: ${{ secrets.DOCKERHUB_CI_HOST }}
           build_file: pisa-controller/hack/Dockerfile 
           tag_with_latest: true
           extra_args: --build-arg GIT_BRANCH=${{ steps.vars.outputs.branch }} --build-arg GIT_COMMIT=${{ steps.vars.outputs.sha_short }} --build-arg GIT_TAG=${{ steps.vars.outputs.tags }}
@@ -66,9 +65,9 @@ jobs:
         uses: mlycore/action-kaniko@master
         with:
           image: pisanixio/proxy
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
-          registry: ${{ secrets.DOCKERHUB_HOST }}
+          username: ${{ secrets.DOCKERHUB_CI_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_CI_PASSWORD }}
+          registry: ${{ secrets.DOCKERHUB_CI_HOST }}
           build_file: pisa-proxy/hack/Dockerfile
           tag_with_latest: true
           extra_args: --build-arg GIT_BRANCH=${{ steps.vars.outputs.branch }} --build-arg GIT_COMMIT=${{ steps.vars.outputs.sha_short }} --build-arg GIT_TAG=${{ steps.vars.outputs.tags }}
