--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -79,7 +79,8 @@ jobs:
           helm dependency build
           cd ..
           helm install pisa-controller pisa-controller -n ${PISANIX_NAMESPACE} 
-          kubectl wait --timeout=60s --for=condition=ready --all pod
+          kubectl get pod -n ${PISANIX_NAMESPACE}
+          kubectl wait --timeout=60s --for=condition=ready --all pod -n ${PISANIX_NAMESPACE}
           cd ..
           cd test/kubernetes
           kubectl apply -f mysql.yml 
